[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_base"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A template Python package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/username/py_base"
"Bug Tracker" = "https://github.com/username/py_base/issues"